2025-10-17T01:27:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18579565253 # 799
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-17
* notice: last 14d: unq all: 9 1706
* notice: prev accum: outdated-unq outdated-all / unq all: 2872 272237 / 2907 274022
* notice: next accum: outdated-unq outdated-all / unq all: 2874 272362 / 2909 274144
* notice: prev exec diff / last date diff / accum: unq all: +2 +122 -1 -76 / +2 +28 -0 -0 / 2 28
* notice: removed / changed dates: [2025-10-02] / [2025-10-03 2025-10-16 2025-10-17]

2025-10-16T01:27:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18547414867 # 798
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-16
* notice: last 14d: unq all: 9 1709
* notice: prev accum: outdated-unq outdated-all / unq all: 2870 272113 / 2904 273896
* notice: next accum: outdated-unq outdated-all / unq all: 2872 272237 / 2907 274022
* notice: prev exec diff / last date diff / accum: unq all: +3 +126 -1 -76 / +2 +29 -0 -0 / 2 29
* notice: removed / changed dates: [2025-10-01] / [2025-10-02 2025-10-15 2025-10-16]

2025-10-15T01:36:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18515021679 # 797
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-15
* notice: last 14d: unq all: 8 1713
* notice: prev accum: outdated-unq outdated-all / unq all: 2868 271989 / 2900 273743
* notice: next accum: outdated-unq outdated-all / unq all: 2870 272113 / 2904 273896
* notice: prev exec diff / last date diff / accum: unq all: +4 +153 -1 -70 / +2 +28 -0 -0 / 2 28
* notice: removed / changed dates: [2025-09-30] / [2025-10-01 2025-10-14 2025-10-15]

2025-10-14T01:26:00Z: