@@ -1,0 +1,9 @@
+{
+  "timestamp" : "2025-11-06T01:59:45Z",
+  "count" : 38,
+  "count_minmax" : [ 38, 38 ],
+  "count_decinc" : [ -0, +38 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 1 ],
+  "uniques_decinc" : [ -0, +1 ]
+}
