@@ -1,144 +1,144 @@
 {
-  "timestamp" : "2025-10-17T01:27:17Z",
-  "count_outdated" : 272362,
-  "uniques_outdated" : 2874,
-  "count" : 274144,
-  "uniques" : 2909,
+  "timestamp" : "2025-11-06T01:59:45Z",
+  "count_outdated" : 274144,
+  "uniques_outdated" : 2909,
+  "count" : 274733,
+  "uniques" : 2929,
   "clones" : [
     {
-      "timestamp": "2025-10-03T00:00:00Z",
-      "count": 50,
-      "count_minmax": [ 31, 126 ],
-      "count_decinc": [ 76, 126 ],
+      "timestamp": "2025-10-23T00:00:00Z",
+      "count": 37,
+      "count_minmax": [ 37, 37 ],
+      "count_decinc": [ 0, 37 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-10-24T00:00:00Z",
+      "count": 39,
+      "count_minmax": [ 39, 39 ],
+      "count_decinc": [ 0, 39 ],
       "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     },
     {
-      "timestamp": "2025-10-04T00:00:00Z",
-      "count": 129,
-      "count_minmax": [ 129, 129 ],
-      "count_decinc": [ 0, 129 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 3 ],
-      "uniques_decinc": [ 0, 3 ]
-    },
-    {
-      "timestamp": "2025-10-05T00:00:00Z",
-      "count": 127,
-      "count_minmax": [ 23, 127 ],
-      "count_decinc": [ 0, 127 ],
+      "timestamp": "2025-10-25T00:00:00Z",
+      "count": 43,
+      "count_minmax": [ 43, 43 ],
+      "count_decinc": [ 0, 43 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
     },
     {
-      "timestamp": "2025-10-06T00:00:00Z",
-      "count": 125,
-      "count_minmax": [ 30, 125 ],
-      "count_decinc": [ 0, 125 ],
-      "uniques": 3,
-      "uniques_minmax": [ 2, 3 ],
-      "uniques_decinc": [ 0, 3 ]
+      "timestamp": "2025-10-26T00:00:00Z",
+      "count": 42,
+      "count_minmax": [ 42, 42 ],
+      "count_decinc": [ 0, 42 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     },
     {
-      "timestamp": "2025-10-07T00:00:00Z",
-      "count": 124,
-      "count_minmax": [ 124, 124 ],
-      "count_decinc": [ 0, 124 ],
+      "timestamp": "2025-10-27T00:00:00Z",
+      "count": 38,
+      "count_minmax": [ 38, 38 ],
+      "count_decinc": [ 0, 38 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
     },
     {
-      "timestamp": "2025-10-08T00:00:00Z",
-      "count": 125,
-      "count_minmax": [ 31, 125 ],
-      "count_decinc": [ 0, 125 ],
-      "uniques": 3,
-      "uniques_minmax": [ 2, 3 ],
-      "uniques_decinc": [ 0, 3 ]
-    },
-    {
-      "timestamp": "2025-10-09T00:00:00Z",
-      "count": 123,
-      "count_minmax": [ 123, 123 ],
-      "count_decinc": [ 0, 123 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 3 ],
-      "uniques_decinc": [ 0, 3 ]
-    },
-    {
-      "timestamp": "2025-10-10T00:00:00Z",
-      "count": 124,
-      "count_minmax": [ 30, 124 ],
-      "count_decinc": [ 0, 124 ],
+      "timestamp": "2025-10-28T00:00:00Z",
+      "count": 40,
+      "count_minmax": [ 40, 40 ],
+      "count_decinc": [ 0, 40 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
     },
     {
-      "timestamp": "2025-10-11T00:00:00Z",
-      "count": 127,
-      "count_minmax": [ 127, 127 ],
-      "count_decinc": [ 0, 127 ],
+      "timestamp": "2025-10-29T00:00:00Z",
+      "count": 38,
+      "count_minmax": [ 38, 38 ],
+      "count_decinc": [ 0, 38 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-10-30T00:00:00Z",
+      "count": 39,
+      "count_minmax": [ 39, 39 ],
+      "count_decinc": [ 0, 39 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-10-31T00:00:00Z",
+      "count": 39,
+      "count_minmax": [ 39, 39 ],
+      "count_decinc": [ 0, 39 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
     },
     {
-      "timestamp": "2025-10-12T00:00:00Z",
-      "count": 127,
-      "count_minmax": [ 27, 127 ],
-      "count_decinc": [ 0, 127 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "timestamp": "2025-11-01T00:00:00Z",
+      "count": 42,
+      "count_minmax": [ 42, 42 ],
+      "count_decinc": [ 0, 42 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     },
     {
-      "timestamp": "2025-10-13T00:00:00Z",
-      "count": 124,
-      "count_minmax": [ 25, 124 ],
-      "count_decinc": [ 0, 124 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "timestamp": "2025-11-02T00:00:00Z",
+      "count": 42,
+      "count_minmax": [ 42, 42 ],
+      "count_decinc": [ 0, 42 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     },
     {
-      "timestamp": "2025-10-14T00:00:00Z",
-      "count": 125,
-      "count_minmax": [ 125, 125 ],
-      "count_decinc": [ 0, 125 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "timestamp": "2025-11-03T00:00:00Z",
+      "count": 38,
+      "count_minmax": [ 38, 38 ],
+      "count_decinc": [ 0, 38 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     },
     {
-      "timestamp": "2025-10-15T00:00:00Z",
-      "count": 125,
-      "count_minmax": [ 28, 125 ],
-      "count_decinc": [ 0, 125 ],
-      "uniques": 3,
-      "uniques_minmax": [ 2, 3 ],
-      "uniques_decinc": [ 0, 3 ]
+      "timestamp": "2025-11-04T00:00:00Z",
+      "count": 40,
+      "count_minmax": [ 40, 40 ],
+      "count_decinc": [ 0, 40 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     },
     {
-      "timestamp": "2025-10-16T00:00:00Z",
-      "count": 123,
-      "count_minmax": [ 29, 123 ],
-      "count_decinc": [ 0, 123 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "timestamp": "2025-11-05T00:00:00Z",
+      "count": 49,
+      "count_minmax": [ 49, 49 ],
+      "count_decinc": [ 0, 49 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     },
     {
-      "timestamp": "2025-10-17T00:00:00Z",
-      "count": 28,
-      "count_minmax": [ 28, 28 ],
-      "count_decinc": [ 0, 28 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "timestamp": "2025-11-06T00:00:00Z",
+      "count": 23,
+      "count_minmax": [ 23, 23 ],
+      "count_decinc": [ 0, 23 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
