@@ -1,81 +1,81 @@
 {
-  "count": 1706,
-  "uniques": 9,
+  "count": 589,
+  "uniques": 6,
   "clones": [
     {
-      "timestamp": "2025-10-03T00:00:00Z",
-      "count": 50,
+      "timestamp": "2025-10-23T00:00:00Z",
+      "count": 37,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2025-10-24T00:00:00Z",
+      "count": 39,
       "uniques": 1
     },
     {
-      "timestamp": "2025-10-04T00:00:00Z",
-      "count": 129,
-      "uniques": 3
-    },
-    {
-      "timestamp": "2025-10-05T00:00:00Z",
-      "count": 127,
+      "timestamp": "2025-10-25T00:00:00Z",
+      "count": 43,
       "uniques": 2
     },
     {
-      "timestamp": "2025-10-06T00:00:00Z",
-      "count": 125,
-      "uniques": 3
+      "timestamp": "2025-10-26T00:00:00Z",
+      "count": 42,
+      "uniques": 1
     },
     {
-      "timestamp": "2025-10-07T00:00:00Z",
-      "count": 124,
+      "timestamp": "2025-10-27T00:00:00Z",
+      "count": 38,
       "uniques": 2
     },
     {
-      "timestamp": "2025-10-08T00:00:00Z",
-      "count": 125,
-      "uniques": 3
-    },
-    {
-      "timestamp": "2025-10-09T00:00:00Z",
-      "count": 123,
-      "uniques": 3
-    },
-    {
-      "timestamp": "2025-10-10T00:00:00Z",
-      "count": 124,
+      "timestamp": "2025-10-28T00:00:00Z",
+      "count": 40,
       "uniques": 2
     },
     {
-      "timestamp": "2025-10-11T00:00:00Z",
-      "count": 127,
+      "timestamp": "2025-10-29T00:00:00Z",
+      "count": 38,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-10-30T00:00:00Z",
+      "count": 39,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-10-31T00:00:00Z",
+      "count": 39,
       "uniques": 2
     },
     {
-      "timestamp": "2025-10-12T00:00:00Z",
-      "count": 127,
-      "uniques": 2
+      "timestamp": "2025-11-01T00:00:00Z",
+      "count": 42,
+      "uniques": 1
     },
     {
-      "timestamp": "2025-10-13T00:00:00Z",
-      "count": 124,
-      "uniques": 2
+      "timestamp": "2025-11-02T00:00:00Z",
+      "count": 42,
+      "uniques": 1
     },
     {
-      "timestamp": "2025-10-14T00:00:00Z",
-      "count": 125,
-      "uniques": 2
+      "timestamp": "2025-11-03T00:00:00Z",
+      "count": 38,
+      "uniques": 1
     },
     {
-      "timestamp": "2025-10-15T00:00:00Z",
-      "count": 125,
-      "uniques": 3
+      "timestamp": "2025-11-04T00:00:00Z",
+      "count": 40,
+      "uniques": 1
     },
     {
-      "timestamp": "2025-10-16T00:00:00Z",
-      "count": 123,
-      "uniques": 2
+      "timestamp": "2025-11-05T00:00:00Z",
+      "count": 49,
+      "uniques": 1
     },
     {
-      "timestamp": "2025-10-17T00:00:00Z",
-      "count": 28,
-      "uniques": 2
+      "timestamp": "2025-11-06T00:00:00Z",
+      "count": 23,
+      "uniques": 1
     }
   ]
 }
