@@ -1,3 +1,12 @@
+2025-11-06T01:59:45Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19122341419 # 800
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-06
+* notice: last 14d: unq all: 6 589
+* notice: prev accum: outdated-unq outdated-all / unq all: 2874 272362 / 2909 274144
+* notice: next accum: outdated-unq outdated-all / unq all: 2909 274144 / 2929 274733
+* notice: prev exec diff / last date diff / accum: unq all: +20 +589 -0 -0 / +1 +23 -0 -0 / 1 23
+* notice: removed / changed dates: [2025-10-03 2025-10-04 2025-10-05 2025-10-06 2025-10-07 2025-10-08 2025-10-09 2025-10-10 2025-10-11 2025-10-12 2025-10-13 2025-10-14 2025-10-15 2025-10-16 2025-10-17] / [2025-10-23 2025-10-24 2025-10-25 2025-10-26 2025-10-27 2025-10-28 2025-10-29 2025-10-30 2025-10-31 2025-11-01 2025-11-02 2025-11-03 2025-11-04 2025-11-05 2025-11-06]
+
 2025-10-17T01:27:17Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18579565253 # 799
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-17
